# stew

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  README_CONFIGURATION.md  README_FAQ.md  README_MULTIPLE_LIBRARIES.md  README_RUNNERS.md  README_SINGLE_LIBRARY.md  README_UPGRADE.md  action.yml  backward-compat-pyproject.toml  convert_to_legacy_poetry.py  pyproject.toml  renovate.json5
.github/: CODEOWNERS
.github/workflows/: coveo-stew.yml  dependency-review.yml
.github/workflows/actions/post-publish/: action.yml
.github/workflows/actions/publish-to-pypi/: action.yml
.github/workflows/actions/setup-python-and-tools/: action.yml
.github/workflows/actions/stew-ci/: action.yml
actions/stew-ci/: README.md  action.yml
coveo_stew/: __main__.py  commands.py  config.py  context.py  discovery.py  environment.py  exceptions.py  offline_publish.py  poetry_backward_compatibility.py  poetry_plugin.py  pydev.py  stew.py  utils.py
coveo_stew/ci/: any_runner.py  black_runner.py  config.py  mypy_runner.py  poetry_runners.py  pytest_runner.py  reporting.py  runner.py  runner_status.py  stew_ci.py  stew_runners.py
coveo_stew/ci/checks/: black.py  mypy.py  poetry.py  pytest.py  stew.py
coveo_stew/ci/checks/lib/: base_check.py  base_check_cli.py  cli_check.py  status.py
coveo_stew/ci/orchestration/: matrix.py  orchestrator.py  output.py  results.py  task.py  ticker_output.py
coveo_stew/ci/reporting/: reporting.py
coveo_stew/cli/: click_interface.py
coveo_stew/metadata/: poetry_api.py  pyproject_api.py  python_api.py  stew_api.py
coveo_stew/package_resources/: mypy.ini
coveo_stew/plugin_commands/: base_command.py  build_command.py  bump_command.py  check_outdated_command.py  ci_command.py  fix_outdated_command.py  fresh_eggs_command.py  locate_command.py  pull_dev_requirements_command.py  refresh_command.py  stew_command.py  version_command.py
coveo_stew/presets/: presets.py  presets_list.py
coveo_stew/ui/click/: cli.py
coveo_stew/ui/poetry/: base_command.py  build_command.py  bump_command.py  check_outdated_command.py  ci_command.py  fix_outdated_command.py  fresh_eggs_command.py  locate_command.py  presets_list.py  pull_dev_requirements_command.py  refresh_command.py  stew_command.py  version_command.py
plugin/: action.yml
test_coveo_stew/: conftest.py  test_backward_compatibility.py  test_config.py  test_discovery.py  test_environment.py  test_mypy_runner.py  test_mypy_runner_paths.py  test_mypy_typed_folders.py  test_plugin.py  test_poetry_groups.py  test_pyproject.py  test_stew_ci.py  test_utils.py  test_validate_toml.py
test_coveo_stew/ci/: test_ci_filter_runners.py  test_ci_matrix.py  test_reporting.py
test_coveo_stew/pyprojet_mock/: fixtures.py
test_coveo_stew/pyprojet_mock/mock-poetry-groups/: mock.pyproject.toml
test_coveo_stew/pyprojet_mock/mock-pyproject/: mock.pyproject.toml
test_coveo_stew/pyprojet_mock/mock-pyproject-dependency/: mock.pyproject.toml
test_coveo_stew/test_helpers/: __init__.py  mock_helpers.py
