[project]
name = "coveo-stew"
version = "4.1.0"
description = "Opinionated python packaging and development utilities"
requires-python = ">=3.10,<4"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [
    { name = "Jonathan Piché", email = "tools@coveo.com" },
]

keywords = [ "packaging", "poetry", "plugin", "ci", "tests" ]

dependencies = [
    "click >=8.2",
    "coveo-functools >=2",
    "coveo-itertools >=2",
    "coveo-systools >=3.0.1",  # 3.0.1+ can retain colors from subprocesses
    "coveo-styles >=2",
    "junit-xml >=1",
    "packaging >=25",
    "poetry >=2",
    "poetry-plugin-export >=1",  # the `requires-plugins` section doesn't seem to work for nested plugins
    "setuptools >=80",
    "toml >=0.10",
    "tomlkit >=0.13",
    "importlib-resources >=6",
]

[project.urls]
repository = "https://github.com/coveo/stew"

[project.scripts]
stew = "coveo_stew.ui.click.cli:stew"

[project.entry-points."poetry.application.plugin"]
stew = "coveo_stew.poetry_plugin:StewPlugin"

[tool.poetry]
packages = [{ include = "coveo_stew/**/*" }]

[tool.poetry.group.test.dependencies]
autoflake = "2.3.1"
black = "24.10"
coveo-testing = "^2.0.0"
flake8 = "7.2"
isort = "*"
mypy = "1.12"
pytest = "*"
types-setuptools = "*"
types-toml = "*"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1"


[tool.stew]
presets = ['clean-imports']
build-without-hashes = true

[tool.stew.quick]
skip = ["pytest", "check-outdated", "poetry-build", "poetry-check"]

[tool.stew.ci]
pytest = true
offline-build = true
black = true

[tool.stew.ci.custom-runners.flake8]
check-args = "--ignore=E203,E501,E701,E704,W503"


[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
extend_skip =  [".poetry"]

[build-system]
requires = ["poetry_core>=2.0"]
build-backend = "poetry.core.masonry.api"
